# multi-agent-system-assig

./: README.md  README.ru.md  deep-research-report.md  highlights.txt  pyproject.toml  run_experiments.py  sn-article-2col.typ  sn-article.typ  softwarex_revision_report.md
data/: client_0_labels.npy  client_0_test.npy  client_0_train.npy  client_1_labels.npy  client_1_test.npy  client_1_train.npy  client_2_labels.npy  client_2_test.npy  client_2_train.npy  client_3_labels.npy  client_3_test.npy  client_3_train.npy  client_4_labels.npy  client_4_test.npy  client_4_train.npy
results/: experiment_results.json
src/: __init__.py  attacks.py  data_gen.py  experiments.py  fl_engine.py  models.py  visualization.py
