[project]
name = "multi"
version = "0.1.0"
description = "Communication-Efficient and Robust Federated Anomaly Detection for IIoT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
]
